homeassistant/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: homeassistant
  labels:
    name: homeassistant
