homeassistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    matchLabels:
      app: homeassistant
  replicas: 1
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
      - name: homeassistant
        image: ghcr.io/home-assistant/home-assistant:stable
        ports:
        - containerPort: 8123
        volumeMounts:
        - name: ha-config-root
          mountPath: /config
      volumes:
      - name: ha-config-root
        persistentVolumeClaim:
          claimName: homeassistant-claim
