homeassistant/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`ha.gerh.co.uk`)
    priority: 10
    services:
    - kind: Service
      name: homeassistant
      namespace: homeassistant
      port: 8123
